--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </main>
     </div>
     
+        <script src="modules/RouterBitLibrary.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
